mcp/mcproxy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-${PACKAGE}-sse-deployment
  namespace: nuvolaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-${PACKAGE}-sse
  template:
    metadata:
      labels:
        app: mcp-${PACKAGE}-sse
    spec:
      containers:
      - name: runtime-container
        image: apache/openserverless-runtime-python:v3.13-${IMAGE_TAG}
        command: ["python"]
        args: ["${PACKAGE}.py"]
        volumeMounts:
        - name: mcp-sse-sever-script
          mountPath: /app
        workingDir: /app
      volumes:
      - name: mcp-sse-sever-script
        configMap:
          name: mcp-${PACKAGE}-sse-script
