mcp/mcproxy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-${PACKAGE}-sse-service
  labels:
    app: mcp-${PACKAGE}-sse
  namespace: nuvolaris
spec:
  selector:
    app: mcp-${PACKAGE}-sse
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
