mcp/mcproxy/kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: mcp-${PACKAGE}-sse-ingress
  labels:
    app: mcp-${PACKAGE}-sse
  namespace: nuvolaris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
  - host: ${HOSTNAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mcp-${PACKAGE}-sse-service
            port:
              number: 8080
