mcp/mcproxy/kubernetes/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcp-${PACKAGE}-sse-ingress
  labels:
    app: mcp-${PACKAGE}-sse
  namespace: nuvolaris
  annotations:
    ingressClassName: traefik    
spec:
  rules:
  - host: {hostname}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mcp-${PACKAGE}-sse-service
            port:
              number: 8080
